# smallauncher

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yaml  release.yaml
crates/smallauncher/: Cargo.toml  build.rs
crates/smallauncher/src/: env.rs  main.rs
crates/smallauncher_lib/: Cargo.toml  rustfmt.toml
crates/smallauncher_lib/src/: download.rs  error.rs  file.rs  launch.rs  lib.rs
crates/smallauncher_lib/src/api/: assets.rs  java.rs  manifest.rs  meta.rs  mod.rs
crates/smallauncher_lib/src/auth/: microsoft.rs  mod.rs  offline.rs
docs/: README.md
