[package]
name = "smallauncher_lib"
version = "0.1.0"
description = "smallauncher core library"
edition = "2021"
authors = ["Heráclito de Quadros Saldanha <heraclitoqsaldanha@gmail.com>"]
license = "MIT OR Unlicense"
keywords = ["smallauncher", "minecraft", "launcher"]
homepage = "https://smallauncher.com/"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ureq = { version = "2.9.6", features = ["json"] }
log = "0.4.21"
sha1 = "0.10.6"
hex = "0.4"
zip = "2.1.5"
oauth2 = { version = "5.0.0", default-features = false }
open = "5"
uuid = "1.13.1"
md5 = "0.7"

[lints.rust]
unsafe_code = "forbid"
